fix:AddTask Alignment

--- a/css/board.css
+++ b/css/board.css
@@ -396,18 +396,6 @@
   animation: wiggle 0.2s ease-in-out;
 }
 
-.card-snap {
-  animation: wiggleScale 0.3s ease-in-out;
-}
-
-@keyframes wiggleScale {
-  0% { transform: scale(1) rotate(0deg); }
-  25% { transform: scale(1.05) rotate(2deg); }
-  50% { transform: scale(1.05) rotate(-2deg); }
-  75% { transform: scale(1.05) rotate(2deg); }
-  100% { transform: scale(1) rotate(0deg); }
-}
-
 .infoTask {
   position: fixed;
   top: calc(45% - 370px);
